- -> Removed
! -> Note

09-Jan-2011 Jean-Marie Simonet
 $ Adding cs-CZ, sq-AL to installation langs + updated some.
 $ Adding fa-IR, vi-VN to installation langs
 $# [#24224] Patch for adding plural strings to backend mod_stats module. Thanks Edgars.
 # [#24219] images in media/system/images/notice-*.png are not fully transparent. Thanks Andrea.
 $ Adding gl_ES, gu-IN to installation langs

08-Jan-2011 Ian MacLennan
 # Updating Copyright Year

08-Jan-2011 Mark Dexter
# [#24013] Short 'params' field length of 5k restricts modules, menus and template functionality
# Sample data fixes (Elin Waring)

08-Jan-2011 Christophe Demko
 # [#24154] Add the required class automatically when required="true" (Jean-Marie Simonet)

08-Jan-2011 Andrew Eddie
 # Fixed issue [#24072] Redirect Component Only Lists 404 Errors - Very Hard to Generate (Steve Burge, Elin Waring).
 # Fixed issue [#21979] Make com_users and mod_login (almost) valid XHTML strict (site) (Rouven Weßling).
 # Fixed issue [#24087] Fix more PHP strict warnings (Rouven Weßling, Nikolai Plath).
 # Fixed issue [#24209] Data from feeds is not filtered (Ian MacLennan).
 # Fixed issue [#24197] Unfiltered output in the media manager - view = images (Ian MacLennan).
 # Fixed issue [#24206] SQL Injection in templates in assignment of template styles to pages (Ian MacLennan).
 # Fixed issue [#24198] Unfiltered output in the media manager - view = imagelist (Ian MacLennan).
 # Fixed issue [#24195] Language should be escaped in JHtmlLanguages (Ian MacLennan).
 # Fixed issue [#24177] *Router issue subsequent to [23818] + cancel from cat list new article wrong redirect (Jean-Marie Simonet).
 # Fixed issue [#24196] fieldid should be properly filtered in the model (Ian MacLennan).
 # Fixed issue [#24199] menutype isn't filtered in the com_menus item model (Ian MacLennan).
 # Fixed issue [#24201] Value in input tag is not escaped (Ian MacLennan).