@@ -1,0 +1,224 @@
+; $Id: pl-PL.ini 2011-01-09 $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+JERROR_PARSING_LANGUAGE_FILE="Plik językowy %l$s nie został prawidłowo odczytany: błędy w liniach %2$s"
+
+;Stepbar
+;Pasek postępu
+INSTL_STEPS_TITLE="Kolejne kroki"
+INSTL_STEP_1_LABEL="1 : Język"
+INSTL_STEP_2_LABEL="2 : Test środowiska"
+INSTL_STEP_3_LABEL="3 : Licencja"
+INSTL_STEP_4_LABEL="4 : Baza danych"
+INSTL_STEP_5_LABEL="5 : Konfiguracja FTP"
+INSTL_STEP_6_LABEL="6 : Konfiguracja"
+INSTL_STEP_7_LABEL="7 : Zakończenie"
+
+;Language view
+; Widok języka
+INSTL_SELECT_LANGUAGE_TITLE="Wybierz język"
+INSTL_SELECT_LANGUAGE_DESC="Wybierz język, który zostanie wykorzystany podczas kolejnych kroków procesu instalacji środowiska Joomla!:"
+INSTL_LANGUAGE_TITLE="Wybierz język"
+INSTL_SELECT_LANGUAGE_DESC="Ostrzeżenie! Do poprawnej instalacji środowiska Joomla! wymagana jest włączona obsługa JavaScript (sprawdź konfigurację przeglądarki internetowej)! "
+
+;Preinstall view
+;Widok oceny sytuacji przed instalacją
+INSTL_PRECHECK_TITLE="Test środowiska przed instalacją"
+INSTL_PRECHECK_FOR_VERSION="Test środowiska przed instalacją %s:"
+INSTL_PRECHECK_DESC="Jeżeli któryś z warunków nie został spełniony (został oznaczony następująco <strong class="_QQ_"red"_QQ_">Nie</strong>), podejmij stosowne kroki, by to zmienić. Jeśli tego nie zrobisz, instalacja Joomla! może się nie udać, Joomla nie będzie działać poprawnie.<br />Możesz zignorować jedynie zapisywanie w configuration.php"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Zalecane ustawienia:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Następujące, zalecane ustawienia PHP zapewnią pełną zgodność ze środowiskiem Joomla.<br />Joomla! będzie jednak działać, nawet gdy twoje ustawienia nie zupełnie odpowiadają tym zalecanym."
+INSTL_PRECHECK_DIRECTIVE="Wytyczna"
+INSTL_PRECHECK_RECOMMENDED="Zalecane"
+INSTL_PRECHECK_ACTUAL="Bieżące"
+
+;Database view
+;Widok bazy danych
+INSTL_DATABASE="Konfiguracja bazy danych"
+INSTL_DATABASE_HOST_DESC="Zwykle jest to &bdquo;localhost&rdquo;"
+INSTL_DATABASE_HOST_LABEL="Nazwa serwera bazy danych"
+INSTL_DATABASE_NAME_DESC="Niektóre serwery pozwalają na ściśle określoną nazwę bazy danych dla danej witryny. W takim przypadku do odróżnienia różnych witryn Joomla! wykorzystujących tę samą bazę danych użyj różnych przedrostków nazw tabel."
+INSTL_DATABASE_NAME_LABEL="Nazwa bazy danych"
+INSTL_DATABASE_OLD_PROCESS_DESC="Dowolne istniejące tabele kopii bezpieczeństwa (backup) pochodzące z wcześniejszych instalacji Joomla! zostaną zastąpione (nadgrane)"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Przetwarzanie starej bazy danych"
+INSTL_DATABASE_PASSWORD_DESC="W celu zapewnienia bezpieczeństwa twojej witrynie obowiązkowe jest zabezpieczenie konta mysql hasłem"
+INSTL_DATABASE_PASSWORD_LABEL="Hasło"
+INSTL_DATABASE_PREFIX_DESC="Wybierz przedrostek dla tablic bazy danych. Idealnie, gdyby miał długość trzech lub czterech znaków, zawierał wyłącznie znaki alfanumeryczne. MUSI kończyć się znakiem podkreślenia. Nie wykorzystuj przedrostka &quot;bak_&quot;, ponieważ jest on wykorzystywany do wyróżnienia tablic kopii bezpieczeństwa (backup)."
+INSTL_DATABASE_PREFIX_LABEL="Przedrostek dla tablic bazy danych"
+INSTL_DATABASE_TYPE_DESC="To jest prawdopodobnie &quot;mysql&quot;"
+INSTL_DATABASE_TYPE_LABEL="Typ bazy danych"
+INSTL_DATABASE_USER_DESC="Prawdopodobnie jedno z dwojga: albo "_QQ_"root"_QQ_" albo nazwa użytkownika, którą przekazał ci usługodawca"
+INSTL_DATABASE_USER_LABEL="Nazwa użytkownika"
+INSTL_DATABASE_TITLE="Ustawienia połączenia (między bazą danych a serwerem www)"
+INSTL_DATABASE_DESC="<p>Konfiguracja środowiska Joomla! na serwerze składa się z 4 prostych kroków...</p><p>Wprowadź proszę nazwę serwera, na którym ma zostać zainstalowane środowisko Joomla!</p><p>Wprowadź nazwę użytkownika bazy MySQL, hasło oraz nazwę bazy danych, która będzie wykorzystywana wraz ze środowiskiem Joomla.</p><p>Wprowadź przedrostek dla tablic, które będą wykorzystywane przez środowisko Joomla! Tym samym określ, w jaki sposób będą obsługiwane już istniejące tablice wcześniej zainstalowanego środowiska.</p>"
+
+;Filesystem view
+;Widok systemu plików
+INSTL_AUTOFIND_FTP_PATH="Automatyczne znajdowanie ścieżki FTP"
+INSTL_FTP="Konfiguracja FTP"
+INSTL_FTP_DESC="<p>Na niektórych serwerach przed zakończeniem instalacji może być wymagane uwierzytelnienie FTP. Jeżeli w trakcie instalacji napotkałeś na trudności związane z brakiem uwierzytelnienia, spytaj swojego dostawcę usług internetowych, czy uwierzytelnienie jest rzeczywiście potrzebne. </p><p>Ze względów bezpieczeństwa wskazane jest stworzenie osobnego konta FTP, które pozwala na dostęp wyłącznie do katalogu instalacyjnego Joomla!, a nie do zasobów całego serwera www. Twój dostawca usług internetowych może ci pomóc w prawidłowej konfiguracji.</p><p><b>Uwaga:</b> Jeżeli instalujesz środowisko Joomla! w systemie operacyjnym Windows, warstwa FTP <strong>nie</strong> jest wymagana.</p>"
+INSTL_FTP_ENABLE_LABEL="Włącz warstwę FTP"
+INSTL_FTP_HOST_LABEL="Nazwa serwera FTP"
+INSTL_FTP_PASSWORD_LABEL="Hasło do konta FTP"
+INSTL_FTP_PORT_LABEL="Port FTP"
+INSTL_FTP_ROOT_LABEL="Ścieżka dostępu do głównego katalogu FTP"
+INSTL_FTP_SAVE_LABEL="Zapisz hasło do konta FTP"
+INSTL_FTP_TITLE="Konfiguracja dostępu przez FTP (<strong class="_QQ_"red"_QQ_">Opcjonalna - Większość użytkowników może pominąć ten etap - Wciśnij przycisk &bdquo;Dalej&rdquo;, by pominąć ten krok</strong>)"
+INSTL_FTP_USER_LABEL="Nazwa użytkownika FTP"
+INSTL_SITE_NAME_LABEL="Nazwa witryny"
+INSTL_VERIFY_FTP_SETTINGS="Zweryfikuj ustawienia FTP"
+INSTL_FTP_SETTINGS_CORRECT="Ustawienia są prawidłowe"
+INSTL_FTP_USER_DESC="Uwaga! Zaleca się niewypełnianie tego pola i każdorazowe wprowadzanie nazwy użytkownika konta FTP przed przesłaniem plików."
+INSTL_FTP_PASSWORD_DESC="Uwaga! Zaleca się niewypełnianie tego pola i każdorazowe wprowadzanie hasła konta FTP przed przesłaniem plików."
+
+;Site View
+;Widok witryny
+INSTL_SITE="Główna konfiguracja"
+INSTL_ADMIN_EMAIL_LABEL="Twój e-mail"
+INSTL_ADMIN_PASSWORD_LABEL="Hasło administratora"
+INSTL_ADMIN_PASSWORD2_LABEL="Potwierdź hasło administratora"
+INSTL_ADMIN_USER_LABEL="Nazwa użytkownika, który będzie administratorem"
+INSTL_SITE_NAME_TITLE="Nazwa witryny"
+INSTL_SITE_META_ADVANCED_SETTINGS="Ustawienia rozszerzone - dodatkowe"
+INSTL_SITE_NAME_DESC="Wprowadź nazwę witryny Joomla!<br />Dodatkowo możesz także od razu podać dla tej witryny meta-opis oraz podać kluczowe meta-słowa."
+INSTL_SITE_METADESC_LABEL="Meta - Opis"
+INSTL_SITE_METADESC_TITLE_LABEL="Wprowadź ogólny opis witryny, który będzie wykorzystywany przez silniki wyszukiwarek. Generalnie za optymalny należy uznać opis zawierający do 20 słów."
+INSTL_SITE_METAKEYS_LABEL="Kluczowe meta-słowa"
+INSTL_SITE_METAKEYS_TITLE_LABEL="Wprowadź słowa kluczowe lub wyrażenia które najlepiej opisują twoją witrynę. Oddziel od siebie kolejne słowa za pomocą przecinków oraz wyrażenia za pomocą pojedynczych cudzysłowów."
+INSTL_SITE_CONF_TITLE="Potwierdź e-mail administratora oraz hasło."
+INSTL_SITE_CONF_DESC="Wpisz swój adres poczty elektronicznej. Ten adres będzie wykorzystany jako adres głównego administratora.<br />Wpisz i powtórz hasło.<br /> Możesz zmienić domyślną nazwę użytkownika <strong>admin</strong>. Ta nazwa użytkownika oraz to hasło posłużą Ci do logowania się na zaplecze administracyjne po zakończeniu instalacji.<br /> Jeżeli dokonujesz migracji, możesz pominąć ten etap. Twoje dane będą przeniesione z&nbsp;poprzedniego serwisu."
+INSTL_SITE_LOAD_SAMPLE_TITLE="Załaduj (do bazy danych) przykładowe dane"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Ważne!</strong>: Nowym użytkownikom Joomla! stanowczo zaleca się załadowanie (do bazy danych) przykładowych danych. By to zrobić wystarczy kliknąć na przycisk <i>przed</i> przejściem do kolejnego etapu procesu instalacji."
+INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. Przykładowe dane:</strong> Przed zakończeniem procesu instalacji możesz zapełnić bazę danych przykładowymi danymi. Są dwie metody realizacji tego zadania:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="1a. Załadowanie <strong>domyślnych przykładowych danych</strong>. Z rozwijalnej listy z dostępnymi próbkami danych wybierz jedną  pozycję, a następnie kliknij na przycisk Załaduj przykładowe dane."
+INSTL_SITE_LOAD_SAMPLE_DESC4="1b. Załadowanie <strong>własnych przykładowych danych</strong>. Z rozwijalnej listy z dostępnymi próbkami danych wybierz jedną  pozycję, a następnie kliknij na przycisk Załaduj przykładowe dane."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Czysta instalacja</strong>: Jeżeli nie chcesz załadować żadnych danych, czyli zainstalować samo (czyste) środowisko, podaj nazwę witryny, adres email administratora witryny oraz hasło. Następnie przejdź do ostatniego kroku, klikając na <em>Dalej</em>."
+INSTL_SITE_SAMPLE_LABEL="Zestaw przykładowych danych"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Załaduj przykładowe dane"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Początkującym użytkownikom Joomla! stanowczo zaleca się załadowanie (do bazy danych) przykładowych danych. Dzięki temu w bazie znajdą się przykładowe dane dołączone do pakietu instalacyjnego Joomla!"
+INSTL_SITE_SAMPLE_LOADED="Przykładowe dane zostały prawidłowo załadowane."
+INSTL_SAMPLE_DATA_SET="Domyślny zbiór przykładowych danych w języku angielskim (GB)"
+
+;Complete view
+;Widok po zakończeniu
+INSTL_COMPLETE="Zakończenie"
+INSTL_COMPLETE_TITLE="Gratulacje! Właśnie zainstalowałeś środowisko Joomla!"
+INSTL_COMPLETE_DESC1="Kliknij przycisk Witryna, by zobaczyć stronę startową swojej witryny Joomla! lub przycisk Zaplecze, jeżeli chcesz przejść do strony logowania do zaplecza witryny."
+INSTL_COMPLETE_DESC2="Na stronie Pomocy Joomla! znajdziesz prostą instrukcję krok po kroku mówiącą o tym, w jaki sposób zainstalować paczkę językową dla twojego języka ojczystego. Jest tam lista odnośników do dostępnych paczek językowych."
+INSTL_COMPLETE_DESC3="Kliknij na przycisku widocznym po prawej stronie, by otworzyć stronę Pomocy Joomla! w nowym oknie."
+INSTL_COMPLETE_REMOVE_INSTALLATION="PROSZĘ PAMIĘTAJ, BY CAŁKOWICIE<br />USUNĄĆ KATALOG INSTALACYJNY (O NAZWIE INSTALLATION).<br />Nie będziesz mógł przejść do kolejnego kroku procesu instalacji, dopóki nie usuniesz tego katalogu. Jest to wymóg podyktowany bezpieczeństwem środowiska Joomla!"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Szczegóły logowania dla Administratora"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! w twoim języku ojczystym?"
+INSTL_COMPLETE_LANGUAGE_2="By uzyskać więcej szczegółów oraz możliwość ściągnięcia odpowiednich paczek, odwiedź stronę Pomocy Joomla!"
+
+;Database Model
+;Model bazy danych
+INSTL_DATABASE_COULD_NOT_CONNECT="Nie udało się nawiązanie połączenia z bazą danych. Instalator zwrócił następującą wartość: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Podczas tworzenia kopii bezpieczeństwa (backup) wystąpiły błędy."
+INSTL_DATABASE_ERROR_CREATE="Podczas próby stworzenia bazy danych %s wystąpiły błędy.<br />Użytkownik może nie posiadać dostatecznych uprawnień by stworzyć bazę danych. Być może konieczne będzie stworzenie bazy danych bez udziału programu instalacyjnego, zanim będziesz mógł kontynuować proces instalacji środowiska Joomla!"
+INSTL_DATABASE_ERROR_DELETE="Podczas usuwania bazy danych wystąpiły błędy."
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Usuń starsze tabele"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Archiwizuj starsze tabele"
+INSTL_DATABASE_FIX_TOO_LONG="Przedrostek tablic MySQL nie może mieć więcej niż 15 znaków."
+INSTL_DATABASE_INVALID_DB_DETAILS="Podane szczegóły dotyczące bazy danych są nieprawidłowe i/lub puste."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="By móc kontynuować proces instalacji konieczny jest serwer bazy danych MySQL w wersji 5.0.4 lub wyższej. Wersja twojego serwera to: %s"
+INSTL_DATABASE_INVALID_TYPE="Proszę wybierz typ bazy danych"
+INSTL_DATABASE_NAME_TOO_LONG="Długość nazwy bazy danych MySQL nie może przekroczyć 64 znaków."
+INSTL_DATABASE_PREFIX_INVALID_CHARS="Nazwa przedrostku tablic MySQL musi zaczynać się literą i może zawierać wyłącznie litery, cyfry lub znak podkreślenia."
+INSTL_DATABASE_INVALID_NAME="Dla wersji MySQL wcześniejszych niż 5.1.6 nazwa nie może zawierać kropek lub innych "_QQ_"specjalnych"_QQ_" znaków. Wersja twojego serwera to: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="Nazwy baz MySQL oraz nazwy tablic nie mogą się zaczynać lub kończyć spacją."
+INSTL_DATABASE_NAME_INVALID_CHAR="Żaden z identyfikatorów MySQL nie może zawierać NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Nie istnieje plik o nazwie %s"
+
+;controllers
+;kontrolery
+INSTL_COOKIES_NOT_ENABLED="Wygląda na to, że w twojej przeglądarce są wyłączone ciasteczka. Jeżeli nie włączysz tej funkcji, nie będziesz mógł zainstalować aplikacji. Ten problem może być też spowodowany przez parametr serwera o nazwie <strong>session.save_path</strong>. W takim przypadku, jeżeli nie wiesz jak sprawdzić to ustawienie lub samodzielnie je zmienić, zasięgnij porady dostawcy usług internetowych."
+INSTL_HEADER_ERROR="Błąd"
+
+;Helpers
+;Pomocnicy
+INSTL_PAGE_TITLE="Instalator internetowy Joomla!"
+
+;Configuration model
+;Model konfiguracji
+INSTL_ERROR_CONNECT_DB="Nie udało się nawiązanie połączenia z bazą danych. Instalator zwrócił błąd: %s"
+INSTL_STD_OFFLINE_MSG="Witryna została wyłączona ze względu na konserwację.<br /> Proszę zajrzyj tu ponownie za jakiś czas."
+
+;Filesystem model
+;Model systemu plików
+INSTL_FTP_INVALIDROOT="Podany katalog FTP nie jest katalogiem instalacji Joomla!"
+INSTL_FTP_NOCONNECT="Nie powiodło się połączenie z serwerem FTP"
+INSTL_FTP_NODELE="Nie powiodło się użycie funkcji "_QQ_"DELE"_QQ_"."
+INSTL_FTP_NODIRECTORYLISTING="Nie powiodło się pobranie zawartości katalogu serwera FTP."
+INSTL_FTP_NOLIST="Nie powiodło się użycie funkcji "_QQ_"LIST"_QQ_"."
+INSTL_FTP_NOLOGIN="Nie powiodło się zalogowanie do serwera FTP".
+INSTL_FTP_NOMKD="Nie powiodło się użycie funkcji "_QQ_"MKD"_QQ_"."
+INSTL_FTP_NONLST="Nie powiodło się użycie funkcji "_QQ_"NLST"_QQ_"."
+INSTL_FTP_NOPWD="Nie powiodło się użycie funkcji "_QQ_"PWD"_QQ_"."
+INSTL_FTP_NORETR="Nie powiodło się użycie funkcji "_QQ_"RETR"_QQ_"."
+INSTL_FTP_NORMD="Nie powiodło się użycie funkcji "_QQ_"RMD"_QQ_"."
+INSTL_FTP_NOROOT="Nie udało się uzyskanie dostępu do podanego katalogu FTP."
+INSTL_FTP_NOSTOR="Nie powiodło się użycie funkcji "_QQ_"STOR"_QQ_"."
+INSTL_FTP_NOSYST="Nie powiodło się użycie funkcji "_QQ_"SYST"_QQ_"."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Nie powiodło się automatyczne wykrycie głównego katalogu FTP."
+
+;others
+;inne
+INSTL_ADVANCED_SETTINGS="Ustawienia zaawansowane"
+INSTL_BASIC_SETTINGS="Ustawienia podstawowe"
+INSTL_CONFPROBLEM="Twój plik lub katalog konfiguracyjny nie ma ustawionych praw pozwalających na ich zapisanie lub wystąpił problem ze stworzeniem pliku konfiguracyjnego. Wobec tego będziesz musiał wgrać następujący kod ręcznie. Kliknij na obszar zawierający tekst by go podświetlić a następnie wklej go do nowego pliku tekstowego. Nadaj temu plikowi nazwę 'configuration.php' i wgraj go do głównego katalogu swojej witryny."
+INSTL_DISPLAY_ERRORS="Wyświetlanie błędów"
+INSTL_ERROR_DB="Podczas wypełniania bazy danych wystąpiły błędy: %s"
+INSTL_FILE_UPLOADS="Przesyłanie plików"
+INSTL_GNU_GPL_LICENSE="GNU Powszechna Licencja Publiczna"
+INSTL_INSTALLATION="Instalacja"
+INSTL_LICENSE="Licencja"
+INSTL_JSON_SUPPORT_AVAILABLE="Obsługa JSON"
+INSTL_MAGIC_QUOTES_RUNTIME="Magiczne apostrofy (Magic Quotes Runtime)"
+INSTL_MB_LANGUAGE_IS_DEFAULT="Język MB jest ustawiony jako domyślny"
+INSTL_MB_STRING_OVERLOAD_OFF="Przeciążanie łańcuchów MB jest wyłączone"
+INSTL_MYSQL_SUPPORT="Obsługa MySQL"
+INSTL_NOTICEMBLANGNOTDEFAULT="Funkcja PHP języka mbstring nie została ustawiony jako neutralna. Można zmienić to ustawienie poprzez dopisanie <strong>php_value mbstring.language neutral</strong> w pliku <code>.htaccess</code>."
+INSTL_NOTICEMBSTRINGOVERLOAD="Funkcja PHP przeciążania mbstring jest ustawiona. Można ją lokalnie wyłączyć poprzez dopisanie <strong>php_value mbstring.func_overload 0</strong> w pliku <code>.htaccess</code>."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Możesz kontynuować instalację, ponieważ ustawienia konfiguracyjne zostaną wyświetlone na ostatnim etapie. Będziesz musiał ręcznie wprowadzić wtedy wyświetlony kod. Kliknij obszar zawierający tekst, by go podświetlić, a następnie wklej go do nowego pliku tekstowego. Nadaj temu plikowi nazwę 'configuration.php' i prześlij go do głównego katalogu swojej witryny."
+INSTL_OUTPUT_BUFFERING="Buforowanie wyjścia"
+INSTL_PARSE_INI_FILE_AVAILABLE="Obsługa parsera INI"
+INSTL_PHP_VERSION="Wersja PHP"
+INSTL_REGISTER_GLOBALS="Rejestracja zmiennych globalnych"
+INSTL_SAFE_MODE="Tryb bezpieczny"
+INSTL_SESSION_AUTO_START="Automatyczny start sesji"
+INSTL_WRITABLE="Zapisywalne"
+INSTL_XML_SUPPORT="Obsługa XML"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Obsługa kompresji Zlib"
+
+;Global strings
+;Globalne zmienne tekstowe
+JADMINISTRATOR="Zaplecze"
+JADVANCED="Dodatkowe"
+JCHECK_AGAIN="Spróbuj ponownie"
+JERROR="Błąd"
+JGLOBAL_ISFREESOFTWARE="%s jest wolnym oprogramowaniem wydanym na licencji <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
+JINVALID_TOKEN="Ostatnie żądanie zostało odrzucone ponieważ zawierało nieprawidłowy token bezpieczeństwa. Odśwież zawartość strony i spróbuj ponownie."
+JNEXT="Dalej"
+JNO="Nie"
+JOFF="Wyłączone"
+JON="Włączone"
+JPREVIOUS="Cofnij"
+JSITE="Witryna"
+JUSERNAME="Nazwa użytkownika"
+JYES="Tak"
+
+; Framework strings necessary when no lang pack is available
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Wymagany plik: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Nieprawidłowy plik: %s"
+
+;Necessary for errors
+;Potrzebne do błędów
+ADMIN_EMAIL="Twój email"
+ADMIN_PASSWORD="Hasło administratora"
+ADMIN_PASSWORD2="Potwierdź hasło administratora"
+SITE_NAME="Nazwa witryny"
