@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
+<metafile
+	version="1.6"
+	client="installation">
+	<name>polski (Polska)</name>
+	<version>1.6.0</version>
+	<creationDate>January 2011</creationDate>
+	<author>Polskie Centrum Joomla! - Maciej Słojewski, Stefan Wajda</author>
+	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description>Polski plik językowy instalatora Joomla</description>
+	<files>
+		<filename>pl-PL.ini</filename>
+	</files>
+	<metadata>
+		<name>polski (Polska)</name>
+		<tag>pl-PL</tag>
+		<rtl>0</rtl>
+	</metadata>
+	<params />
+</metafile>
